[metadata]
name = feeling
description = A simple feelings recorder and viewer for the terminal, built with Textual
version = attr: feeling.__version__
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/davep/feeling
author = Dave Pearson
author_email = davep@davep.org
maintainer = Dave Pearson
maintainer_email = davep@davep.org
license = License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
license_files = LICENCE
keywords = terminal, library, feelings
classifiers =
    License :: OSI Approved :: MIT License
    Environment :: Console
    Development Status :: 3 - Alpha
    Intended Audience :: End Users/Desktop
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls =
    Documentation = https://github.com/davep/feeling/blob/main/README.md
    Source = https://github.com/davep/feeling
    Issues = https://github.com/davep/feeling/issues
    Discussions = https://github.com/davep/feeling/discussions

[options]
packages = find:
platforms = any
include_package_data = True
install_requires =
    textual==0.15.1
    xdg
python_requires = >=3.10

[options.entry_points]
console_scripts =
    feeling = feeling.__main__:main

### setup.cfg ends here
